--- a/final_report/data_analyses/tables/tab_lmer_sel.html
+++ b/final_report/data_analyses/tables/tab_lmer_sel.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="fjsmjcoyss" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#fjsmjcoyss table {
+<div id="ayugmdhfhq" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#ayugmdhfhq table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#fjsmjcoyss thead, #fjsmjcoyss tbody, #fjsmjcoyss tfoot, #fjsmjcoyss tr, #fjsmjcoyss td, #fjsmjcoyss th {
+#ayugmdhfhq thead, #ayugmdhfhq tbody, #ayugmdhfhq tfoot, #ayugmdhfhq tr, #ayugmdhfhq td, #ayugmdhfhq th {
   border-style: none;
 }
 
-#fjsmjcoyss p {
+#ayugmdhfhq p {
   margin: 0;
   padding: 0;
 }
 
-#fjsmjcoyss .gt_table {
+#ayugmdhfhq .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_caption {
+#ayugmdhfhq .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#fjsmjcoyss .gt_title {
+#ayugmdhfhq .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#fjsmjcoyss .gt_subtitle {
+#ayugmdhfhq .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#fjsmjcoyss .gt_heading {
+#ayugmdhfhq .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_bottom_border {
+#ayugmdhfhq .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_col_headings {
+#ayugmdhfhq .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_col_heading {
+#ayugmdhfhq .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#fjsmjcoyss .gt_column_spanner_outer {
+#ayugmdhfhq .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#fjsmjcoyss .gt_column_spanner_outer:first-child {
+#ayugmdhfhq .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#fjsmjcoyss .gt_column_spanner_outer:last-child {
+#ayugmdhfhq .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#fjsmjcoyss .gt_column_spanner {
+#ayugmdhfhq .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#fjsmjcoyss .gt_spanner_row {
+#ayugmdhfhq .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#fjsmjcoyss .gt_group_heading {
+#ayugmdhfhq .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#fjsmjcoyss .gt_empty_group_heading {
+#ayugmdhfhq .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#fjsmjcoyss .gt_from_md > :first-child {
+#ayugmdhfhq .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#fjsmjcoyss .gt_from_md > :last-child {
+#ayugmdhfhq .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#fjsmjcoyss .gt_row {
+#ayugmdhfhq .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#fjsmjcoyss .gt_stub {
+#ayugmdhfhq .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#fjsmjcoyss .gt_stub_row_group {
+#ayugmdhfhq .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#fjsmjcoyss .gt_row_group_first td {
+#ayugmdhfhq .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#fjsmjcoyss .gt_row_group_first th {
+#ayugmdhfhq .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#fjsmjcoyss .gt_summary_row {
+#ayugmdhfhq .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#fjsmjcoyss .gt_first_summary_row {
+#ayugmdhfhq .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_first_summary_row.thick {
+#ayugmdhfhq .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#fjsmjcoyss .gt_last_summary_row {
+#ayugmdhfhq .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_grand_summary_row {
+#ayugmdhfhq .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#fjsmjcoyss .gt_first_grand_summary_row {
+#ayugmdhfhq .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_last_grand_summary_row_top {
+#ayugmdhfhq .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_striped {
+#ayugmdhfhq .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#fjsmjcoyss .gt_table_body {
+#ayugmdhfhq .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_footnotes {
+#ayugmdhfhq .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_footnote {
+#ayugmdhfhq .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#fjsmjcoyss .gt_sourcenotes {
+#ayugmdhfhq .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#fjsmjcoyss .gt_sourcenote {
+#ayugmdhfhq .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,63 +387,63 @@
   padding-right: 5px;
 }
 
-#fjsmjcoyss .gt_left {
+#ayugmdhfhq .gt_left {
   text-align: left;
 }
 
-#fjsmjcoyss .gt_center {
+#ayugmdhfhq .gt_center {
   text-align: center;
 }
 
-#fjsmjcoyss .gt_right {
+#ayugmdhfhq .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#fjsmjcoyss .gt_font_normal {
+#ayugmdhfhq .gt_font_normal {
   font-weight: normal;
 }
 
-#fjsmjcoyss .gt_font_bold {
+#ayugmdhfhq .gt_font_bold {
   font-weight: bold;
 }
 
-#fjsmjcoyss .gt_font_italic {
+#ayugmdhfhq .gt_font_italic {
   font-style: italic;
 }
 
-#fjsmjcoyss .gt_super {
+#ayugmdhfhq .gt_super {
   font-size: 65%;
 }
 
-#fjsmjcoyss .gt_footnote_marks {
+#ayugmdhfhq .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#fjsmjcoyss .gt_asterisk {
+#ayugmdhfhq .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#fjsmjcoyss .gt_indent_1 {
+#ayugmdhfhq .gt_indent_1 {
   text-indent: 5px;
 }
 
-#fjsmjcoyss .gt_indent_2 {
+#ayugmdhfhq .gt_indent_2 {
   text-indent: 10px;
 }
 
-#fjsmjcoyss .gt_indent_3 {
+#ayugmdhfhq .gt_indent_3 {
   text-indent: 15px;
 }
 
-#fjsmjcoyss .gt_indent_4 {
+#ayugmdhfhq .gt_indent_4 {
   text-indent: 20px;
 }
 
-#fjsmjcoyss .gt_indent_5 {
+#ayugmdhfhq .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
@@ -465,22 +465,22 @@
   </thead>
   <tbody class="gt_table_body">
     <tr><td headers="model_name" class="gt_row gt_center">0</td>
-<td headers="description" class="gt_row gt_center">Compound + Day + FlowerID</td>
+<td headers="description" class="gt_row gt_center">Compound + Day + FlowerID  + SubplotID</td>
 <td headers="aic" class="gt_row gt_center">7830</td>
 <td headers="bic" class="gt_row gt_center">7942</td>
 <td headers="r2m" class="gt_row gt_center">0.694</td></tr>
     <tr><td headers="model_name" class="gt_row gt_center">1</td>
-<td headers="description" class="gt_row gt_center">Compound:Day + Day + FlowerID</td>
-<td headers="aic" class="gt_row gt_center">4924</td>
-<td headers="bic" class="gt_row gt_center">5035</td>
-<td headers="r2m" class="gt_row gt_center">0.655</td></tr>
+<td headers="description" class="gt_row gt_center">Compound*Day + FlowerID + SubplotID</td>
+<td headers="aic" class="gt_row gt_center">4912</td>
+<td headers="bic" class="gt_row gt_center">5117</td>
+<td headers="r2m" class="gt_row gt_center">0.736</td></tr>
     <tr><td headers="model_name" class="gt_row gt_center">2</td>
 <td headers="description" class="gt_row gt_center">Compound:Day + Day + FlowerID + SubplotID</td>
 <td headers="aic" class="gt_row gt_center">4926</td>
 <td headers="bic" class="gt_row gt_center">5044</td>
 <td headers="r2m" class="gt_row gt_center">0.655</td></tr>
     <tr><td headers="model_name" class="gt_row gt_center">3</td>
-<td headers="description" class="gt_row gt_center">Compound:Day + Day + Species + FlowerID + SubplotID</td>
+<td headers="description" class="gt_row gt_center">Compound:Day + Day + Species + Type + FlowerID + SubplotID</td>
 <td headers="aic" class="gt_row gt_center">4714</td>
 <td headers="bic" class="gt_row gt_center">4838</td>
 <td headers="r2m" class="gt_row gt_center">0.874</td></tr>
