--- a/final_report/data_analyses/tables/tab_lmer_contr.html
+++ b/final_report/data_analyses/tables/tab_lmer_contr.html
@@ -7,23 +7,23 @@
 
 </head>
 <body>
-<div id="hsgpwhcaic" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-  <style>#hsgpwhcaic table {
+<div id="czvtunottw" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+  <style>#czvtunottw table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#hsgpwhcaic thead, #hsgpwhcaic tbody, #hsgpwhcaic tfoot, #hsgpwhcaic tr, #hsgpwhcaic td, #hsgpwhcaic th {
+#czvtunottw thead, #czvtunottw tbody, #czvtunottw tfoot, #czvtunottw tr, #czvtunottw td, #czvtunottw th {
   border-style: none;
 }
 
-#hsgpwhcaic p {
+#czvtunottw p {
   margin: 0;
   padding: 0;
 }
 
-#hsgpwhcaic .gt_table {
+#czvtunottw .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -49,12 +49,12 @@
   border-left-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_caption {
+#czvtunottw .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#hsgpwhcaic .gt_title {
+#czvtunottw .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -66,7 +66,7 @@
   border-bottom-width: 0;
 }
 
-#hsgpwhcaic .gt_subtitle {
+#czvtunottw .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -78,7 +78,7 @@
   border-top-width: 0;
 }
 
-#hsgpwhcaic .gt_heading {
+#czvtunottw .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -90,13 +90,13 @@
   border-right-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_bottom_border {
+#czvtunottw .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_col_headings {
+#czvtunottw .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -111,7 +111,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_col_heading {
+#czvtunottw .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -131,7 +131,7 @@
   overflow-x: hidden;
 }
 
-#hsgpwhcaic .gt_column_spanner_outer {
+#czvtunottw .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -143,15 +143,15 @@
   padding-right: 4px;
 }
 
-#hsgpwhcaic .gt_column_spanner_outer:first-child {
+#czvtunottw .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hsgpwhcaic .gt_column_spanner_outer:last-child {
+#czvtunottw .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hsgpwhcaic .gt_column_spanner {
+#czvtunottw .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -163,11 +163,11 @@
   width: 100%;
 }
 
-#hsgpwhcaic .gt_spanner_row {
+#czvtunottw .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#hsgpwhcaic .gt_group_heading {
+#czvtunottw .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -193,7 +193,7 @@
   text-align: left;
 }
 
-#hsgpwhcaic .gt_empty_group_heading {
+#czvtunottw .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -208,15 +208,15 @@
   vertical-align: middle;
 }
 
-#hsgpwhcaic .gt_from_md > :first-child {
+#czvtunottw .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hsgpwhcaic .gt_from_md > :last-child {
+#czvtunottw .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hsgpwhcaic .gt_row {
+#czvtunottw .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -235,7 +235,7 @@
   overflow-x: hidden;
 }
 
-#hsgpwhcaic .gt_stub {
+#czvtunottw .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -248,7 +248,7 @@
   padding-right: 5px;
 }
 
-#hsgpwhcaic .gt_stub_row_group {
+#czvtunottw .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -262,15 +262,15 @@
   vertical-align: top;
 }
 
-#hsgpwhcaic .gt_row_group_first td {
+#czvtunottw .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#hsgpwhcaic .gt_row_group_first th {
+#czvtunottw .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#hsgpwhcaic .gt_summary_row {
+#czvtunottw .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -280,16 +280,16 @@
   padding-right: 5px;
 }
 
-#hsgpwhcaic .gt_first_summary_row {
+#czvtunottw .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_first_summary_row.thick {
+#czvtunottw .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#hsgpwhcaic .gt_last_summary_row {
+#czvtunottw .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -299,7 +299,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_grand_summary_row {
+#czvtunottw .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -309,7 +309,7 @@
   padding-right: 5px;
 }
 
-#hsgpwhcaic .gt_first_grand_summary_row {
+#czvtunottw .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -319,7 +319,7 @@
   border-top-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_last_grand_summary_row_top {
+#czvtunottw .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -329,11 +329,11 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_striped {
+#czvtunottw .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hsgpwhcaic .gt_table_body {
+#czvtunottw .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -342,7 +342,7 @@
   border-bottom-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_footnotes {
+#czvtunottw .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -356,7 +356,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_footnote {
+#czvtunottw .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -365,7 +365,7 @@
   padding-right: 5px;
 }
 
-#hsgpwhcaic .gt_sourcenotes {
+#czvtunottw .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -379,7 +379,7 @@
   border-right-color: #D3D3D3;
 }
 
-#hsgpwhcaic .gt_sourcenote {
+#czvtunottw .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -387,69 +387,69 @@
   padding-right: 5px;
 }
 
-#hsgpwhcaic .gt_left {
+#czvtunottw .gt_left {
   text-align: left;
 }
 
-#hsgpwhcaic .gt_center {
+#czvtunottw .gt_center {
   text-align: center;
 }
 
-#hsgpwhcaic .gt_right {
+#czvtunottw .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hsgpwhcaic .gt_font_normal {
+#czvtunottw .gt_font_normal {
   font-weight: normal;
 }
 
-#hsgpwhcaic .gt_font_bold {
+#czvtunottw .gt_font_bold {
   font-weight: bold;
 }
 
-#hsgpwhcaic .gt_font_italic {
+#czvtunottw .gt_font_italic {
   font-style: italic;
 }
 
-#hsgpwhcaic .gt_super {
+#czvtunottw .gt_super {
   font-size: 65%;
 }
 
-#hsgpwhcaic .gt_footnote_marks {
+#czvtunottw .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#hsgpwhcaic .gt_asterisk {
+#czvtunottw .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#hsgpwhcaic .gt_indent_1 {
+#czvtunottw .gt_indent_1 {
   text-indent: 5px;
 }
 
-#hsgpwhcaic .gt_indent_2 {
+#czvtunottw .gt_indent_2 {
   text-indent: 10px;
 }
 
-#hsgpwhcaic .gt_indent_3 {
+#czvtunottw .gt_indent_3 {
   text-indent: 15px;
 }
 
-#hsgpwhcaic .gt_indent_4 {
+#czvtunottw .gt_indent_4 {
   text-indent: 20px;
 }
 
-#hsgpwhcaic .gt_indent_5 {
+#czvtunottw .gt_indent_5 {
   text-indent: 25px;
 }
 </style>
   <table class="gt_table" style="table-layout: fixed;" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
   <colgroup>
-    <col style="width:350px;"/>
+    <col style="width:180px;"/>
     <col/>
     <col/>
     <col/>
@@ -466,49 +466,49 @@
     <tr class="gt_col_headings">
       <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="Contrast">Contrast</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Estimate">Estimate</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Std. Error">Std. Error</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="Degrees of Freedom">Degrees of Freedom</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="SE">SE</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="DF">DF</th>
       <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="t-value">t-value</th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="p-value">p-value</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="p-value">p-value</th>
     </tr>
   </thead>
   <tbody class="gt_table_body">
     <tr><td headers="contrast" class="gt_row gt_left">Apathic Acid - Beerse Brew</td>
-<td headers="estimate" class="gt_row gt_right">−0.318</td>
-<td headers="SE" class="gt_row gt_right">0.062</td>
-<td headers="df" class="gt_row gt_right">3,633</td>
-<td headers="t.ratio" class="gt_row gt_right">−5.138</td>
-<td headers="p.value" class="gt_row gt_right">3.07e-05</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.32</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3633</td>
+<td headers="t.ratio" class="gt_row gt_right">−5.14</td>
+<td headers="p.value" class="gt_row gt_left">&lt;.001</td></tr>
     <tr><td headers="contrast" class="gt_row gt_left">Apathic Acid - Distilled of Discovery</td>
-<td headers="estimate" class="gt_row gt_right">−0.388</td>
-<td headers="SE" class="gt_row gt_right">0.063</td>
-<td headers="df" class="gt_row gt_right">3,623</td>
-<td headers="t.ratio" class="gt_row gt_right">−6.182</td>
-<td headers="p.value" class="gt_row gt_right">7.37e-08</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.39</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3623</td>
+<td headers="t.ratio" class="gt_row gt_right">−6.18</td>
+<td headers="p.value" class="gt_row gt_left">&lt;.001</td></tr>
     <tr><td headers="contrast" class="gt_row gt_left">Apathic Acid - Essence of Epiphanea</td>
-<td headers="estimate" class="gt_row gt_right">−0.411</td>
-<td headers="SE" class="gt_row gt_right">0.061</td>
-<td headers="df" class="gt_row gt_right">3,634</td>
-<td headers="t.ratio" class="gt_row gt_right">−6.789</td>
-<td headers="p.value" class="gt_row gt_right">1.38e-09</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.41</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3634</td>
+<td headers="t.ratio" class="gt_row gt_right">−6.79</td>
+<td headers="p.value" class="gt_row gt_left">&lt;.001</td></tr>
     <tr><td headers="contrast" class="gt_row gt_left">Beerse Brew - Distilled of Discovery</td>
-<td headers="estimate" class="gt_row gt_right">−0.070</td>
-<td headers="SE" class="gt_row gt_right">0.062</td>
-<td headers="df" class="gt_row gt_right">3,633</td>
-<td headers="t.ratio" class="gt_row gt_right">−1.146</td>
-<td headers="p.value" class="gt_row gt_right">1.00e+00</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.07</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3633</td>
+<td headers="t.ratio" class="gt_row gt_right">−1.15</td>
+<td headers="p.value" class="gt_row gt_left">1</td></tr>
     <tr><td headers="contrast" class="gt_row gt_left">Beerse Brew - Essence of Epiphanea</td>
-<td headers="estimate" class="gt_row gt_right">−0.094</td>
-<td headers="SE" class="gt_row gt_right">0.059</td>
-<td headers="df" class="gt_row gt_right">3,623</td>
-<td headers="t.ratio" class="gt_row gt_right">−1.583</td>
-<td headers="p.value" class="gt_row gt_right">1.00e+00</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.09</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3623</td>
+<td headers="t.ratio" class="gt_row gt_right">−1.58</td>
+<td headers="p.value" class="gt_row gt_left">1</td></tr>
     <tr><td headers="contrast" class="gt_row gt_left">Distilled of Discovery - Essence of Epiphanea</td>
-<td headers="estimate" class="gt_row gt_right">−0.023</td>
-<td headers="SE" class="gt_row gt_right">0.060</td>
-<td headers="df" class="gt_row gt_right">3,633</td>
-<td headers="t.ratio" class="gt_row gt_right">−0.385</td>
-<td headers="p.value" class="gt_row gt_right">1.00e+00</td></tr>
+<td headers="estimate" class="gt_row gt_right">−0.02</td>
+<td headers="SE" class="gt_row gt_right">0.06</td>
+<td headers="df" class="gt_row gt_right">3633</td>
+<td headers="t.ratio" class="gt_row gt_right">−0.38</td>
+<td headers="p.value" class="gt_row gt_left">1</td></tr>
   </tbody>
   
   
